Added link to download DocLayNet.

--- a/notebooks/doclaynet_cleaning.ipynb
+++ b/notebooks/doclaynet_cleaning.ipynb
@@ -39,6 +39,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this notebook to work you need to download the **DocLayNet** dataset and put it in the `data/external/DocLayNet` folder."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/DS4SD/DocLayNet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 104,
    "metadata": {},
@@ -113,7 +129,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "data_path='./DocLayNet_core/COCO/'\n",
+    "data_path='../data/external/DocLayNet/DocLayNet_core/COCO/'\n",
     "\n",
     "\n",
     "ds_raw = load_dataset('json', data_files={'train': data_path+'train.json', 'test': data_path+'test.json'}, field='annotations')\n",
