Changed data paths
Made the data paths coherent with what was already used in other notebooks

--- a/notebooks/doclaynet_cleaning.ipynb
+++ b/notebooks/doclaynet_cleaning.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76cb29e723a343e48db20b018e55858e",
+       "model_id": "a1bcf0b174a342d6a684319a82df9a8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this notebook to work you need to download the **DocLayNet** dataset and put it in the `data/external/DocLayNet` folder."
+    "For this notebook to work you need to download the **DocLayNet** dataset and put it in the `data/raw/DocLayNet` folder."
    ]
   },
   {
@@ -56,21 +56,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-bc6fa5c11760025a\n",
-      "Found cached dataset json (/Users/pmorelr/.cache/huggingface/datasets/json/default-bc6fa5c11760025a/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51)\n"
+      "Using custom data configuration default-98097377c2f3fd0b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset json/default to /Users/vcollumeau/.cache/huggingface/datasets/json/default-98097377c2f3fd0b/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "220ed43ac22a4e139c5a61b2e291a3f2",
+       "model_id": "73e1b0a352be421a9280b58afeafbf03",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e6affdeea6da433d9595f8c8161b9175",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b57bd68cfbc43409a5b6068c21cec8a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "509afd52d3d849aca894f81eb005d616",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset json downloaded and prepared to /Users/vcollumeau/.cache/huggingface/datasets/json/default-98097377c2f3fd0b/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a5510a7144349eca19ddff7759b052e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,14 +154,83 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-22b77c36e7c1e3b5\n",
-      "Found cached dataset json (/Users/pmorelr/.cache/huggingface/datasets/json/default-22b77c36e7c1e3b5/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51)\n"
+      "Using custom data configuration default-61714aaa529ec9e0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset json/default to /Users/vcollumeau/.cache/huggingface/datasets/json/default-61714aaa529ec9e0/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a0829a078da4afd9d2cdf01e75fe928",
+       "model_id": "b9e73f0bdf7b41c7828edefcc0d85fcd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7fca6425985d4e4c977f5ae6a8b98922",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0331da7de9149cd82ca6aecbf121a08",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8bcb76e8ca49433e88203a239fffdadc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset json downloaded and prepared to /Users/vcollumeau/.cache/huggingface/datasets/json/default-61714aaa529ec9e0/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "049f83fb07e24c07921ae8ddcaa9c5fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,14 +245,83 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-7786cc65356a5cd3\n",
-      "Found cached dataset json (/Users/pmorelr/.cache/huggingface/datasets/json/default-7786cc65356a5cd3/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51)\n"
+      "Using custom data configuration default-6b94c16cb0ed0c8c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset json/default to /Users/vcollumeau/.cache/huggingface/datasets/json/default-6b94c16cb0ed0c8c/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "587ee138b67e4a159a018415098f636a",
+       "model_id": "5ca3c17aeec34765a58df8c4e8d72ec7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "592e80de19534a69a4eb7a310fa919e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5331cef65cc74258b32cdbfc81773a0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "405ed1f120484d5c9be05e8391c7e1ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset json downloaded and prepared to /Users/vcollumeau/.cache/huggingface/datasets/json/default-6b94c16cb0ed0c8c/0.0.0/0f7e3662623656454fcd2b650f34e886a7db4b9104504885bd462096cc7a9f51. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5bddd0cc61e34003874f6c753d999f3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +336,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "data_path='../data/external/DocLayNet/DocLayNet_core/COCO/'\n",
+    "data_path='../data/raw/DocLayNet/DocLayNet_core/COCO/'\n",
     "\n",
     "\n",
     "ds_raw = load_dataset('json', data_files={'train': data_path+'train.json', 'test': data_path+'test.json'}, field='annotations')\n",
@@ -139,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
