--- a/notebooks/docbank-analyse-dataset.ipynb
+++ b/notebooks/docbank-analyse-dataset.ipynb
@@ -72,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Aug 30 2022, 04:58:11) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "papermill": {
    "duration": 7.897837,
