Added text treatment

--- a/notebooks/doclaynet_cleaning.ipynb
+++ b/notebooks/doclaynet_cleaning.ipynb
@@ -670,9 +670,7 @@
     "            w[-1].append(' '.join(w[-1][1:]))\n",
     "            del w[-1][1:-1]\n",
     "\n",
-    "    words.append(w)\n",
-    "\n",
-    "\n"
+    "    words.append(w)"
    ]
   },
   {
@@ -722,6 +720,41 @@
     "- Treat the cases in which the OCR fails.\n",
     "- Correctly structure the `words` list with paddings and everything related to basic NLP preprocessing."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_ids = []\n",
+    "image_path = []\n",
+    "bboxes = []\n",
+    "tags = []\n",
+    "words = []\n",
+    "\n",
+    "for i_doc in range(len(dataset)):\n",
+    "\n",
+    "    img_ids.append(dataset[i_doc]['id'])\n",
+    "    image_path.append(dataset[i_doc]['image_path'])\n",
+    "    tags.append([])\n",
+    "    bboxes.append([])\n",
+    "    words.append([])\n",
+    "\n",
+    "    for i_bb in range(len(dataset[i_doc]['bboxes'])):\n",
+    "\n",
+    "        if dataset[i_doc]['tags'][i_bb] in [3,7]:\n",
+    "            tags[-1].append(dataset[i_doc]['tags'][i_bb])\n",
+    "            bboxes[-1].append(dataset[i_doc]['bboxes'][i_bb])\n",
+    "            words[-1].append(0)\n",
+    "\n",
+    "        else:\n",
+    "            for text in words_bb[i_doc]:\n",
+    "                if check_bbox_in(dataset[i_doc]['bboxes'][i_bb], text[1]) and text[0] not in ['$', '.', '–', '_', '(', ')', '%', '#']:\n",
+    "                   tags[-1].append(dataset[i_doc]['tags'][i_bb])\n",
+    "                   bboxes[-1].append(text[1])\n",
+    "                   words[-1].append(text[0])"
+   ]
   }
  ],
  "metadata": {
@@ -740,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
