Corrected bug for text preprocessing

--- a/notebooks/doclaynet_cleaning.ipynb
+++ b/notebooks/doclaynet_cleaning.ipynb
@@ -746,7 +746,7 @@
     "        if dataset[i_doc]['tags'][i_bb] in [3,7]:\n",
     "            tags[-1].append(dataset[i_doc]['tags'][i_bb])\n",
     "            bboxes[-1].append(dataset[i_doc]['bboxes'][i_bb])\n",
-    "            words[-1].append(0)\n",
+    "            words[-1].append('')\n",
     "\n",
     "        else:\n",
     "            for text in words_bb[i_doc]:\n",
