Corrected bug regarding tag indexation

--- a/notebooks/doclaynet_cleaning.ipynb
+++ b/notebooks/doclaynet_cleaning.ipynb
@@ -433,7 +433,7 @@
     "\n",
     "    if ds_raw[part][i]['image_id'] == img_id:\n",
     "        bboxes[-1].append(ds_raw[part][i]['bbox'])\n",
-    "        tags[-1].append(ds_raw[part][i]['category_id'])\n",
+    "        tags[-1].append(ds_raw[part][i]['category_id'] -1)\n",
     "    else:\n",
     "        bboxes.append([])\n",
     "        tags.append([])\n",
