--- a/notebooks/doclaynet_cleaning.ipynb
+++ b/notebooks/doclaynet_cleaning.ipynb
@@ -335,6 +335,7 @@
    ],
    "source": [
     "from datasets import load_dataset\n",
+    "import datasets\n",
     "\n",
     "data_path='../data/raw/DocLayNet/DocLayNet_core/COCO/'\n",
     "\n",
@@ -641,7 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_bboxes(b1, b2):\n",
+    "def check_bbox_in(b1, b2):\n",
     "    if b1[0]<=b2[0] and b1[1]<=b2[1] and b1[0]+b1[2]>=b2[0]+b2[2] and b1[1]+b1[3]>=b2[1]+b2[3]:\n",
     "        return True"
    ]
@@ -670,7 +671,7 @@
     "        w.append([])\n",
     "        w[-1].append(dataset[i_doc]['tags'][i_bb])\n",
     "        for text in words_bb[i_doc]:\n",
-    "            if check_bboxes(dataset[i_doc]['bboxes'][i_bb], text[1]):\n",
+    "            if check_bbox_in(dataset[i_doc]['bboxes'][i_bb], text[1]):\n",
     "                w[-1].append(text[0])\n",
     "\n",
     "        if len(w[-1])>2:\n",
