--- a/notebooks/layoutlm_funsd.ipynb
+++ b/notebooks/layoutlm_funsd.ipynb
@@ -130,15 +130,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# `OBS: Jacques` \n",
-    "## Forgot to tell you, but you need an access token from HuggingFace if you want to fine-tune the model. If you focus on deploying the pre-trained model first, without fine-tuning, you won't need it; so you can comment this notebook_login() part"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 133,
    "metadata": {},
@@ -165,7 +156,7 @@
     "\n",
     "notebook_login()\n",
     "\n",
-    "access_token = \"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\""
+    "access_token = \"ACCESS_TOKEN\""
    ]
   },
   {
@@ -176,15 +167,6 @@
     "We will use the FUNSD dataset a collection of 199 fully annotated forms. The dataset is available on Hugging Face at <code>nielsr/funsd</code>.\n",
     "\n",
     "The LayoutLM model doesn't have a <code>AutoProcessor</code> to nice create the our input documents, but we can use the <code>LayoutLMv2Processor</code> instead."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# `OBS: Jacques` \n",
-    "## Remember to put the `PNG` folder on your local repo. You'll need it to load the images to the encoder. I have already ignored it in `.gitignore`."
    ]
   },
   {
@@ -719,28 +701,6 @@
     "        \"labels\": Sequence(ClassLabel(names=labels)),\n",
     "    }\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Could not infer dtype of Image",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [141], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m a\u001b[39m=\u001b[39mImage\u001b[39m.\u001b[39mopen(PNG_PATH \u001b[39m+\u001b[39m dataset[PART][\u001b[39m\"\u001b[39m\u001b[39mimage_path\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m])\u001b[39m.\u001b[39mconvert(\u001b[39m\"\u001b[39m\u001b[39mRGB\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m torch\u001b[39m.\u001b[39;49mtensor(a)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Could not infer dtype of Image"
-     ]
-    }
-   ],
-   "source": [
-    "a=Image.open(PNG_PATH + dataset[PART][\"image_path\"][0]).convert(\"RGB\")\n",
-    "torch.tensor(a)"
    ]
   },
   {
@@ -1829,22 +1789,6 @@
     "model = LayoutLMForTokenClassification.from_pretrained(\n",
     "    MODEL_ID, num_labels=len(labels), label2id=label2id, id2label=id2label, use_auth_token=access_token\n",
     ")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# `Now we go back to the fine-tuning`"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fine-tune and evaluate LayoutLM"
    ]
   },
   {
