Added resize_bboxes function

--- a/notebooks/doclaynet_cleaning.ipynb
+++ b/notebooks/doclaynet_cleaning.ipynb
@@ -2,32 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "506b115408a04314a5b5f2578627959d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from huggingface_hub import notebook_login\n",
     "from datasets import load_dataset, Dataset\n",
     "from PIL import Image, ImageDraw, ImageFont\n",
     "import numpy as np\n",
-    "import json\n",
-    "\n",
-    "notebook_login()"
+    "import json"
    ]
   },
   {
@@ -56,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f46bff4bb5c4a768ea7e631a89470db",
+       "model_id": "4cfc7c18342d4e5fa7f16a79f198fcd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,7 +74,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0000bcafb80d4f028ab1952636e03dfd",
+       "model_id": "e583c39158a64db3b0efd70ae0296aa1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51e32facf69c4cd881e01c8063034786",
+       "model_id": "c7768841d222486c9f37da62886c9b36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,6 +117,26 @@
     "ds_raw = load_dataset('json', data_files={'train': data_path+'train.json', 'test': data_path+'test.json', 'val': data_path+'val.json'}, field='annotations')\n",
     "images = load_dataset('json', data_files={'train': data_path+'train.json', 'test': data_path+'test.json', 'val': data_path+'val.json'}, field='images')\n",
     "categories = load_dataset('json', data_files={'train': data_path+'train.json', 'test': data_path+'test.json', 'val': data_path+'val.json'}, field='categories')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datasets.dataset_dict.DatasetDict"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(ds_raw)"
    ]
   },
   {
